--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite App</title>
     <!-- CSS only -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <script type="module" crossorigin src="/assets/index.18d886b8.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.e5e84315.js">
-    <link rel="stylesheet" href="/assets/index.178de123.css">
+    <script type="module" crossorigin src="./assets/index.18d886b8.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.e5e84315.js">
+    <link rel="stylesheet" href="./assets/index.178de123.css">
   </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
